--- a/noksha.html
+++ b/noksha.html
@@ -29,7 +29,7 @@
 &lt;body&gt;
   &lt;h1 c-deeppink&gt;Hello World&lt;/h1&gt;
 &lt;/body&gt;
-&lt;script src="noksha.js"&gt;&lt;/script&gt;
+&lt;script src="https://v3coder.github.io/cdn/noksha.js"&gt;&lt;/script&gt;
 &lt;/html&gt;</code>
     <br></div>
     <visitor></visitor>
