--- a/noksha.html
+++ b/noksha.html
@@ -13,7 +13,7 @@
 
 <body>
   <popup name="Open Dialog"><h2>Headline</h2>This is a simple popup dialog.<button b>Cancle</button><button id="close">OK</button></popup>
-  <theme color="mediumpurple" font="Consolas"></theme>
+  <theme color="mediumpurple" style="font-family:Consolas"></theme>
   <div bg-#f4f5f6>
     <div a-center bw-0><br><br><div fs-70px c-mediumpurple>Noksha</div><div fs-16px lh-1 c-lightslategrey>neno coding html framework</div></div>
     
