--- a/noksha.html
+++ b/noksha.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Content Wrapper</title>
 <style>
+  body {font-family:Consolas}
   slider item heading { display: block; padding-bottom: 20px; font-weight: bold; border-bottom: 1px solid rgba(0,0,0,0.1); margin: 0px -20px 15px; font-size: 16px; text-align: center; }
   content { min-width: inherit !important;}
 </style>
@@ -13,7 +14,7 @@
 
 <body>
   <popup name="Open Dialog"><h2>Headline</h2>This is a simple popup dialog.<button b>Cancle</button><button id="close">OK</button></popup>
-  <theme color="mediumpurple" style="font-family:Consolas"></theme>
+  <theme color="mediumpurple"></theme>
   <div bg-#f4f5f6>
     <div a-center bw-0><br><br><div fs-70px c-mediumpurple>Noksha</div><div fs-16px lh-1 c-lightslategrey>neno coding html framework</div></div>
     
